--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "canvas": "~1.1.1",
+    "canvas": "~1.1.6",
     "noflo": "~0.5.9"
   },
   "devDependencies": {
     "chai": "~1.9.0",
-    "grunt": "~0.21.1",
+    "grunt": "^0.4.5",
     "grunt-cafe-mocha": "~0.1.2",
     "grunt-coffeelint": "~0.0.6",
     "grunt-contrib-coffee": "~0.11.1",
